--- a/MetaMorpheusSetup/Product.wxs
+++ b/MetaMorpheusSetup/Product.wxs
@@ -1,31 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"><?define GUI_TargetDir=$(var.GUI.TargetDir)?>
+<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+
+  <!--Shorthand way of getting the install directory-->
+  <?define GUI_TargetDir=$(var.GUI.TargetDir)?>
 	
-  <Product Id="*" Name="MetaMorpheusSteup" Language="1033" Version="1.0.0.0" Manufacturer="Microsoft" UpgradeCode="438ad6ff-f027-423a-ab0b-c73384c0e2e5">
-		<Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
+  <!--Product compiles into an msi file. Only one can be present.-->
+  <!--Version needs to be replaced automatically-->
+  <Product Id="*" Name="MetaMorpheus" Language="1033" Version="1.0.0.0" Manufacturer="Smith Group" UpgradeCode="438ad6ff-f027-423a-ab0b-c73384c0e2e5">
+		
+    <!--Properties about the package to be placed in the Summary Information Stream.-->
+    <!--These are visible from COM through the IStream interface, and these properties can be seen on the package in Explorer.-->
+    <Package InstallerVersion="500" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
 
-		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-		<MediaTemplate />
+		<MajorUpgrade DowngradeErrorMessage="A newer version of MetaMorpheus is already installed." />
+    
+		<MediaTemplate EmbedCab="yes"/>
 
-		<Feature Id="ProductFeature" Title="MetaMorpheusSteup" Level="1">
-			<ComponentGroupRef Id="ProductComponents" />
+    <!--A feature for the Feature table. Features are the smallest installable unit.-->
+		<Feature Id="ProductFeature" Level="1">
+      <!-- ComponentGroupRef creates a reference to a ComponentGroup in another Fragment-->
+      <ComponentGroupRef Id="ProductComponents" />
 			<ComponentGroupRef Id="src_Mods_files" />
 			<ComponentGroupRef Id="src_Data_files" />
+      <!--ComponentRef creates a reference to a Component element in another Fragment-->
       <ComponentRef Id="AppShortCut"/>
 		</Feature>
+    
 	</Product>
 
 	<Fragment>
 		<Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="ProgramFilesFolder">
-				<Directory Id="INSTALLFOLDER" Name="MetaMorpheusSteup">
+			<Directory Id="ProgramFiles64Folder">
+				<Directory Id="INSTALLFOLDER" Name="MetaMorpheus">
 				  <Directory Id="src_Data" Name="Data" />
 				  <Directory Id="src_Mods" Name="Mods" />
 				</Directory>
 			</Directory>
-    <Directory Id="ProgramMenuFolder">
-      <Directory Id="ApplicationProgramFolder" Name="Metamorpheus"/>
-    </Directory>
+      <Directory Id="ProgramMenuFolder">
+        <Directory Id="ApplicationProgramFolder" Name="MetaMorpheus"/>
+      </Directory>
 		</Directory>
 	</Fragment>
 
@@ -423,7 +436,8 @@
         <File Id="src_System.Resources.ResourceManager.dll" Name="System.Resources.ResourceManager.dll" Source="$(var.GUI_TargetDir)System.Resources.ResourceManager.dll" />
       </Component>
 		</ComponentGroup>
-  <DirectoryRef Id="ApplicationProgramFolder">
+  
+    <DirectoryRef Id="ApplicationProgramFolder">
       <Component Id="AppShortCut" Guid="b4a458e0-06ce-452d-bfaf-0f413007abc3">
         <Shortcut Id="AppStartMenuSC" Name="MetaMorpheus" Description="Shortcut to App" Target="[#MetaMorpheusGUI.exe]" WorkingDirectory="INSTALLFOLDER" />
         <Shortcut Id="UninstallProduct"             
@@ -432,7 +446,7 @@
                           Target="[System64Folder]msiexec.exe"
                           Arguments="/x [ProductCode]"/>
         <RemoveFolder Id="ApplicationProgramFolder" On="uninstall"/>
-        <RegistryValue Root="HKCU" Key="Software\Microsoft\MetaMorpheusSteup" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
+        <RegistryValue Root="HKCU" Key="Software\Microsoft\MetaMorpheus" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
     </DirectoryRef>
 	</Fragment>
