--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -17,6 +17,11 @@
             <MenuItem Header="_Help">
                 <MenuItem Header="Open Wiki Page" Click="MenuItem_Click" />
             </MenuItem>
+            <MenuItem Header="Restore">
+                <MenuItem Header="Restore Data Files" Click="MenuItem_Click_2"></MenuItem>
+                <MenuItem Header="Restore Mod Files"></MenuItem>
+                <MenuItem Header="Restore All (Both Data and Mods)"></MenuItem>
+            </MenuItem>
         </Menu>
         <Grid>
             <Grid.ColumnDefinitions>
