--- a/GUI/MetaUpdater.xaml
+++ b/GUI/MetaUpdater.xaml
@@ -5,15 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
-        Title="MetaUpdater" Height="223.567" Width="434.713" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" >
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="83*"/>
-            <ColumnDefinition Width="63*"/>
-        </Grid.ColumnDefinitions>
-        <TextBlock Name="lbl"  HorizontalAlignment="Left" Margin="25,22,0,0" TextWrapping="Wrap" FontSize="15" VerticalAlignment="Top" RenderTransformOrigin="-0.317,-0.906" Height="61" Width="374" Grid.ColumnSpan="2"/>
-        <Button Content="No" FontSize="13" HorizontalAlignment="Left" Margin="64,114,0,0" VerticalAlignment="Top" Width="75" Height="22" Click="NoClicked" Grid.Column="1"/>
-        <Button Content="Yes" FontSize="13" HorizontalAlignment="Left" Margin="46,114,0,0" VerticalAlignment="Top" Width="75" Height="22" Click="YesClicked" RenderTransformOrigin="1.89,2.898"/>
-        <CheckBox Content="Do not remind me anymore." HorizontalAlignment="Left" Margin="46,153,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked" Unchecked="CheckBox_unChecked"/>
-    </Grid>
+        Title="MetaUpdater" Height="220" Width="430" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen">
+    <StackPanel>
+        <TextBlock Name="lbl" TextWrapping="Wrap" FontSize="15" VerticalAlignment="Top" Margin="5" />
+        <Button Content="Download and run installer" FontSize="13" Margin="5" Click="InstallerClicked" />
+        <Button Content="Download and open portable version .zip " FontSize="13" Margin="5" Click="PortableClicked" />
+        <Button Content="Not interested" FontSize="13" Margin="5" Click="NoClicked" />
+    </StackPanel>
 </Window>
