--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -11,6 +11,7 @@
         <Menu x:Name="menu" DockPanel.Dock="Top">
             <MenuItem Header="_Help">
                 <MenuItem Header="Open Wiki Page" Click="MenuItem_Click" />
+                <MenuItem Header="Check For Updates" Click="MenuItem_Click_2"/>
             </MenuItem>            
         </Menu>
         <Grid>
